--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   width: 826px;
   min-height: 225px;
   height: auto;
-  margin: 396px auto 60px;
+  margin: 60px auto;
 }
 
 .u-section-1 .u-text-1 {
@@ -168,7 +168,6 @@
   min-height: 152px;
   margin-top: 0;
   margin-bottom: 0;
-  height: auto;
 }
 
 .u-section-4 .u-text-1 {
@@ -205,7 +204,6 @@
   min-height: 149px;
   margin-top: 0;
   margin-bottom: 0;
-  height: auto;
 }
 
 .u-section-4 .u-text-3 {
@@ -260,20 +258,12 @@
     padding-right: 15px;
   }
 
-  .u-section-4 .u-group-1 {
-    height: auto;
-  }
-
   .u-section-4 .u-layout-cell-3 {
     min-height: 335px;
   }
 
   .u-section-4 .u-container-layout-4 {
     padding: 28px 0;
-  }
-
-  .u-section-4 .u-group-2 {
-    height: auto;
   }
 
   .u-section-4 .u-text-3 {
@@ -500,7 +490,6 @@
 .u-section-6-2 .u-group-1 {
   width: 837px;
   min-height: 142px;
-  height: auto;
   margin: 329px auto 0;
 }
 
@@ -512,12 +501,6 @@
 .u-section-6-2 .u-text-2 {
   text-align: center;
   margin: 31px 0 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-6-2 .u-group-1 {
-    height: auto;
-  }
 }
 
 @media (max-width: 991px) {
