--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 .u-section-1 .u-group-1 {
   width: 826px;
   min-height: 225px;
-  height: auto;
   margin: 60px auto;
 }
 
@@ -23,12 +22,6 @@
   text-align: center;
   width: 512px;
   margin: 18px auto 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-1 .u-group-1 {
-    height: auto;
-  }
 }
 
 @media (max-width: 991px) {
@@ -408,7 +401,8 @@
 .u-section-6-1 .u-group-1 {
   width: 575px;
   min-height: 384px;
-  margin: -433px 20px 0 auto;
+  height: auto;
+  margin: -433px 20px 60px auto;
 }
 
 .u-section-6-1 .u-container-layout-1 {
@@ -431,6 +425,12 @@
   font-weight: normal;
   background-image: none;
   margin: 20px auto 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-6-1 .u-group-1 {
+    height: auto;
+  }
 }
 
 @media (max-width: 991px) {
