--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/background.jpg");
-  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -22,6 +21,12 @@
   text-align: center;
   width: 512px;
   margin: 18px auto 0;
+}
+
+@media (max-width: 1199px) {
+   .u-section-1 {
+    background-position: 50% 50%;
+  }
 }
 
 @media (max-width: 991px) {
@@ -401,7 +406,6 @@
 .u-section-6-1 .u-group-1 {
   width: 575px;
   min-height: 384px;
-  height: auto;
   margin: -433px 20px 60px auto;
 }
 
@@ -425,12 +429,6 @@
   font-weight: normal;
   background-image: none;
   margin: 20px auto 0 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-6-1 .u-group-1 {
-    height: auto;
-  }
 }
 
 @media (max-width: 991px) {
