--- a/base.css
+++ b/base.css
@@ -11168,6 +11168,7 @@ section.u-image:not(.u-hover-box),
 .u-overlap.u-overlap-transparent .u-header {
   background-color: transparent !important;
   background-image: none !important;
+  color: transparent !important;
 }
 .u-overlap.u-offcanvas-opened .u-header.u-sticky {
   z-index: auto;
