--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<img alt="{{ painting.name }}" src="{{ painting.image.url }}" width="75%">
+<img id="painting" alt="{{ painting.name }}" src="{{ painting.image.url }}" width="75%">
 <hr>
 <blockquote>
     “{{ painting.name }}”
