--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -4,6 +4,11 @@
 
 {% block content %}
     <div id="centrify">
-        Idk what I should write here
+        <div id="contact-data">
+            <span><strong>Telegram:</strong> <a target="_blank" href="https://t.me/mrnereof">@MrNereof</a></span>
+            <span><strong>Discord:</strong> <span style="color: var(--link-color)">MrNereof#8882</span></span>
+            <span><strong>Github:</strong> <a target="_blank" href="https://github.com/MrNereof">MrNereof</a></span>
+            <span><strong>Email:</strong> <a target="_blank" href="mailto:mr@nereof.com">mr@nereof.com</a></span>
+        </div>
     </div>
 {% endblock %}
