Fix painting width

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<img id="painting" alt="{{ painting.name }}" src="{{ painting.image.url }}" width="75%">
-<hr>
-<blockquote>
-    “{{ painting.name }}”
-    <span>{{ painting.author }}</span>
-</blockquote>
+    <div>
+        <img id="painting" alt="{{ painting.name }}" src="{{ painting.image.url }}" width="100%">
+        <hr>
+    </div>
+    <blockquote>
+        “{{ painting.name }}”
+        <span>{{ painting.author }}</span>
+    </blockquote>
 {% endblock %}
