--- a/staticfiles/styles.css
+++ b/staticfiles/styles.css
@@ -40,6 +40,10 @@ header {
     align-items: center;
 }
 
+#painting-container {
+    max-width: 90%;
+}
+
 #painting {
     margin-top: 100px;
     max-width: 450px;
