--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div>
+    <div id="painting-container">
         <img id="painting" alt="{{ painting.name }}" src="{{ painting.image.url }}" width="100%">
         <hr>
     </div>
