--- a/web/templates/project.html
+++ b/web/templates/project.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Projects{% endblock %}
+{% block title %}{{ project.name }}{% endblock %}
 
 {% block content %}
     <div class="projects">
