--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static yandex_metrica %}
 
 <html>
     <head>
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{% static 'styles.css' %}">
         <link rel="icon" href="{% static 'favicon.ico' %}">
+
+        {% yandex_metrica %}
     </head>
     <body>
         <header>
