--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}MrNereof{% endblock %}
+
 {% block content %}
     <div id="painting-container">
         <img id="painting" alt="{{ painting.name }}" src="{{ painting.image.url }}" width="100%">
