--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -14,6 +14,8 @@
         <meta property="og:description" content="Idk what I should write here.">
         <meta property="og:type" content=website>
         <meta property="og:image" content={{ request.scheme }}://{{ request.get_host }}{% static 'logo.jpg' %}>
+        <meta name="theme-color" content="#524232">
+        <meta name="twitter:card" content="summary_large_image">
 
         {% yandex_metrica %}
     </head>
