Update discord contact information

--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -4,7 +4,7 @@
     <div id="centrify">
         <div id="contact-data">
             <span><strong>Telegram:</strong> <a target="_blank" href="https://t.me/mrnereof">@MrNereof</a></span>
-            <span><strong>Discord:</strong> <span style="color: var(--link-color)">MrNereof#8882</span></span>
+            <span><strong>Discord:</strong> <span style="color: var(--link-color)">mrnereof</span></span>
             <span><strong>Github:</strong> <a target="_blank" href="https://github.com/MrNereof">MrNereof</a></span>
             <span><strong>Email:</strong> <a target="_blank" href="mailto:mr@nereof.com">mr@nereof.com</a></span>
         </div>
